fix(navbar): corrige z-index da navbar movendo-a para fora do header

--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -1,4 +1,5 @@
 #navbar {
+    position: relative;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -6,33 +7,25 @@
     width: 100%;
     padding: 0 1rem;
     background-color: var(--primary-dark);
+    z-index: 100;
     .menu-btn, .close-btn {
         display: flex;
         align-items: center;
         color: var(--text-terciary);
         font-size: 2rem;
         width: 2rem;
-    }
-    .menu {
-        position: absolute;
-        top: -25rem;
-        left: 0;
-        background-color: var(--primary-dark);
-        width: 100vw;
-        z-index: -1;
-        .menu-list {
-            padding: 0 0 1rem 0;
-            .menu-item {
-                display: flex;
-                align-items: center;
-                gap: .5rem;
-                font-size: var(--text-base);
-                color: var(--text-terciary);
-                width: 100%;
-                padding: 1rem;
-            }
-        }
-        .logout-btn {
+    } 
+}
+.menu {
+    position: absolute;
+    top: -25rem;
+    left: 0;
+    background-color: var(--primary-dark);
+    width: 100vw;
+    z-index: 99;
+    .menu-list {
+        padding: 0 0 1rem 0;
+        .menu-item {
             display: flex;
             align-items: center;
             gap: .5rem;
@@ -41,5 +34,14 @@
             width: 100%;
             padding: 1rem;
         }
+    }
+    .logout-btn {
+        display: flex;
+        align-items: center;
+        gap: .5rem;
+        font-size: var(--text-base);
+        color: var(--text-terciary);
+        width: 100%;
+        padding: 1rem;
     }
 }
